<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView
        android:id="@+id/bg"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:scaleType="centerCrop"
        android:src="@drawable/bg"
        android:foreground="@drawable/overlay_image"/>
    <TextView
        android:id="@+id/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_title"
        android:layout_marginTop="82dp"
        android:textAlignment="center"
        android:textSize="24sp"
        android:typeface="sans"
        android:textColor="@android:color/white"/>
    <TextView
        android:id="@+id/subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:text="@string/subtitle"
        android:fontFamily="sans-serif"
        android:typeface="sans"
        android:layout_below="@id/app_name"
        android:textAlignment="center"/>
    <TextView
        android:id="@+id/search_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/search_bg"
        android:paddingTop="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="8dp"
        android:layout_below="@id/bg"
        android:layout_marginTop="-82dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:textSize="15sp"
        android:text="@string/search"
        android:drawablePadding="8dp"
        android:drawableLeft="@drawable/ic_search_black_24dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/bg"
        android:padding="16dp">
        <TextView
            style="@style/TextContent.Title"
            android:text="@string/restaurant_near_you"
            android:layout_marginTop="8dp"/>
        <android.support.v7.widget.RecyclerView
            android:id="@+id/nearYouRv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            style="@style/TextContent.Title"
            android:text="Recomended for You"
            android:layout_marginTop="8dp"/>
        <android.support.v7.widget.RecyclerView
            android:id="@+id/recomended"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            style="@style/TextContent.Title"
            android:text="@string/popular_this_week"
            android:layout_marginTop="8dp"/>
        <android.support.v7.widget.RecyclerView
            android:id="@+id/popular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</RelativeLayout>