<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="16dp"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:id="@+id/textview"
        style="@style/TextContent.Title"
        android:text="@string/details"
        android:layout_marginBottom="16dp"/>
    <TextView
        android:id="@+id/address_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textview"
        android:text="@string/address"
        android:drawableLeft="@drawable/ic_place_black_32dp"
        android:drawablePadding="24dp"
        android:gravity="center_vertical"
        android:textColor="@color/greyDarken"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/address_label"
        tools:text="@string/dummy_address"
        android:paddingLeft="55dp"
        android:paddingRight="8dp"
        android:layout_marginTop="8dp"/>
    <TextView
        android:id="@+id/open_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/address"
        android:text="Open Map"
        android:background="@drawable/textview_border"
        android:padding="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="55dp"
        android:textColor="@color/colorAccent"/>

    <TextView
        android:id="@+id/telp_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/open_map"
        android:text="@string/call"
        android:drawableLeft="@drawable/ic_call_black_32dp"
        android:drawablePadding="24dp"
        android:gravity="center_vertical"
        android:textColor="@color/greyDarken"
        android:textStyle="bold"
        android:layout_marginTop="16dp"/>
    <TextView
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/telp_label"
        tools:text="@string/dummy_address"
        android:paddingLeft="55dp"
        android:paddingRight="8dp"
        android:layout_marginTop="8dp"/>

</RelativeLayout>